--- a/lessons/02-18-lesson03/recipe-color.html
+++ b/lessons/02-18-lesson03/recipe-color.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="styles.css" />
-  <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Assistant' rel='stylesheet'>
   <title>This is the title</title>
 </head>
 
