--- a/lessons/02-27-lesson06/index.html
+++ b/lessons/02-27-lesson06/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,27 +8,35 @@
   <link rel="stylesheet" type="text/css" href="styles.css" />
   <title>Document</title>
 </head>
+
 <body>
   <a href="#division01">Jump to division 1</a>
   <a href="#division02">Jump to division 2</a>
 
   <div id="division01">
-      <h1>Headline 1</h1>
-      <p id="my-paragraph">This is Paragraph 1</p>
-      <img id="image01" src="https://images.unsplash.com/photo-1551135511-435281ed6e55?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1825&q=80" alt="">
+    <h1>Headline 1</h1>
+    <p id="my-paragraph">This is Paragraph 1</p>
+    <img id="image01"
+      src="https://images.unsplash.com/photo-1551135511-435281ed6e55?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1825&q=80"
+      alt="">
   </div>
 
   <div id="division02">
     <h1>Headline 2</h1>
     <p>This is Paragraph 2</p>
-    <img id="fei" src="https://images.unsplash.com/photo-1542834281-0e5abcbdc5b4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="">
+    <img id="fei"
+      src="https://images.unsplash.com/photo-1542834281-0e5abcbdc5b4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80"
+      alt="">
   </div>
 
   <div id="division03">
     <h1>Headline 3</h1>
     <p>This is Paragraph 3</p>
-    <img id="image03" src="https://images.unsplash.com/photo-1550406087-462881168796?ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80" alt="">
+    <img id="image03"
+      src="https://images.unsplash.com/photo-1550406087-462881168796?ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80"
+      alt="">
   </div>
 
 </body>
+
 </html>
