--- a/lessons/02-25-lesson05/index.html
+++ b/lessons/02-25-lesson05/index.html
@@ -9,14 +9,18 @@
 </head>
 <body>
 
+  <a href="#division01"> Division 1</a>
+  <a href="#division02"> Division 2</a>
   <div id="division01">
-      <h1>Headline 1</h1>
-      <p>This is Paragraph 1</p>
+      <h1>Landscape </h1>
+      <!--<p>This is Paragraph 1</p> -->
+      <img id = "image1" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSgLbbm-5YGMZ_OjFOmSe0cyp4Z3lRXwATYhEZAvFqaFgQJexMQGg">
   </div>
 
   <div id="division02">
-    <h1>Headline 2</h1>
-    <p>This is Paragraph 2</p>
+    <h1>Food</h1>
+    <!-- <p>This is Paragraph 2</p> -->
+    <img id="image2" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTX4su914YcHZUNILIMf5yJwJnsWyAod5_TBsZ3JzV2XwCpI9NURw" />
   </div>
 
 </body>
