--- a/lessons/03-13-lesson10/index.html
+++ b/lessons/03-13-lesson10/index.html
@@ -29,6 +29,21 @@
         <h2>Play with colors - RGBA</h2>
         <div class="box rgba"></div>
     </article>
+    <hr>
+    <p>Grid starts from here</p>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="box rgba"></div>
+            </div>
+            <div class="col">
+                <div class="box rgba"></div>
+            </div>
+            <div class="col">
+                <div class="box rgba"></div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
