--- a/lessons/03-04-lesson07/index.html
+++ b/lessons/03-04-lesson07/index.html
@@ -6,41 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HTML and CSS Classes</title>
-    <link rel="stylesheet" type="text/css" href="class.css" />
+
+    <link rel="stylesheet" type="text/css" href="whatever.css" />
 </head>
 
 <body>
-    <article id="dogs" class="box">
+    <article id="dogs">
         <h1 class="title">Dogs</h1>
         <img src="https://images.unsplash.com/photo-1551135511-435281ed6e55?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=400&w=600&q=80"
             alt="">
     </article>
 
-    <article id="shoes" class="box">
+    <article id="shoes">
         <h1 class="title">Shoes</h1>
         <img src="https://images.unsplash.com/photo-1542834281-0e5abcbdc5b4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=400&w=600&q=80"
             alt="">
     </article>
 
-    <article id="flowers" class="box">
+    <article id="flowers">
         <h1 class="title">Flowers</h1>
         <img src="https://images.unsplash.com/photo-1550406087-462881168796?ixlib=rb-1.2.1&auto=format&fit=crop&h=400&w=600&q=80"
             alt="">
     </article>
 
-    <article id="earth" class="box">
+    <article id="earth">
         <h1 class="title">Earth</h1>
         <img src="https://images.unsplash.com/photo-1446776811953-b23d57bd21aa?ixlib=rb-1.2.1&auto=format&fit=crop&h=400&w=600&q=80"
             alt="">
     </article>
 
-    <article id="dragon" class="box">
+    <article id="dragon">
         <h1 class="title">Dragon</h1>
         <img src="https://images.unsplash.com/photo-1508454868649-abc39873d8bf?ixlib=rb-1.2.1&auto=format&fit=crop&h=400&w=600&q=80"
             alt="">
     </article>
 
-    <article id="tapes" class="box">
+    <article id="tapes">
         <h1 class="title">Tapes</h1>
         <img src="https://images.unsplash.com/photo-1481137344492-d5a150a97f8b?ixlib=rb-1.2.1&auto=format&fit=crop&h=400&w=600&q=80"
             alt="">
