🏫  With the work done in class

--- a/lessons/03-18-lesson11/index-complete.html
+++ b/lessons/03-18-lesson11/index-complete.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Colors, box model and bootstrap</title>
+    <title>My fav places in Munich</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
@@ -14,34 +14,34 @@
 <body>
     <div class="container">
         <div class="row">
-            <h1>My fav places in Munich</h1>
+            <h1 class="title">My fav places in Munich</h1>
         </div>
         <div class="row">
             <article class="col post">
-                <header class="post__title">
+                <header class="title">
                     <h1>Olympiapark</h1>
                 </header>
-                <img src="https://images.unsplash.com/photo-1520364729339-dcee97a284ff?ixlib=rb-1.2.1&auto=format&fit=crop&h=400&w=800&q=80"
-                    alt="">
-                <div class="post__content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque inventore
+                <img
+                    src="https://images.unsplash.com/photo-1520364729339-dcee97a284ff?ixlib=rb-1.2.1&auto=format&fit=crop&h=160&w=300&q=80">
+                <div class="content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque inventore
                     delectus molestiae ipsum architecto nobis corrupti ratione culpa esse autem!</div>
             </article>
             <article class="col post">
-                <header class="post__title">
+                <header class="title">
                     <h1>Marienplatz</h1>
                 </header>
-                <img src="https://images.unsplash.com/photo-1465479499730-d2c36f03ef87?ixlib=rb-1.2.1&auto=format&fit=crop&h=400&w=800&q=80"
-                    alt="">
-                <div class="post__content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque inventore
+                <img
+                    src="https://images.unsplash.com/photo-1465479499730-d2c36f03ef87?ixlib=rb-1.2.1&auto=format&fit=crop&h=160&w=300&q=80">
+                <div class="content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque inventore
                     delectus molestiae ipsum architecto nobis corrupti ratione culpa esse autem!</div>
             </article>
             <article class="col post">
-                <header class="post__title">
+                <header class="title">
                     <h1>Eisbachwelle</h1>
                 </header>
-                <img src="https://images.unsplash.com/photo-1526420463306-5124b0d03be4?ixlib=rb-1.2.1&auto=format&fit=crop&h=400&w=800&q=80"
-                    alt="">
-                <div class="post__content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque inventore
+                <img
+                    src="https://images.unsplash.com/photo-1526420463306-5124b0d03be4?ixlib=rb-1.2.1&auto=format&fit=crop&h=160&w=300&q=80">
+                <div class="content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque inventore
                     delectus molestiae ipsum architecto nobis corrupti ratione culpa esse autem!</div>
             </article>
         </div>
