--- a/lessons/03-18-lesson11/index.html
+++ b/lessons/03-18-lesson11/index.html
@@ -12,36 +12,30 @@
 </head>
 
 <body>
-    <h1>Colors, box model and bootstrap</h1>
-    <article>
-        <h2>Play with colors - RGB</h2>
-        <div class="box rgb"></div>
-    </article>
-    <article>
-        <h2>Play with colors - Hex</h2>
-        <div class="box hex"></div>
-    </article>
-    <article>
-        <h2>Play with colors - HSL</h2>
-        <div class="box hsl"></div>
-    </article>
-    <article>
-        <h2>Play with colors - RGBA</h2>
-        <div class="box rgba"></div>
-    </article>
-    <hr>
-    <p>Grid starts from here</p>
     <div class="container">
         <div class="row">
-            <div class="col">
-                <div class="box rgba"></div>
-            </div>
-            <div class="col">
-                <div class="box rgba"></div>
-            </div>
-            <div class="col">
-                <div class="box rgba"></div>
-            </div>
+            <!-- The most important content of the website -->
+            <article class="col post">
+                <header>
+                    <h1>Olympiapark</h1>
+                </header>
+                <img
+                    src="https://images.unsplash.com/photo-1520364729339-dcee97a284ff?ixlib=rb-1.2.1&auto=format&fit=crop&h=160&w=300&q=80">
+            </article>
+            <article class="col post">
+                <header>
+                    <h1>Marienplatz</h1>
+                </header>
+                <img
+                    src="https://images.unsplash.com/photo-1465479499730-d2c36f03ef87?ixlib=rb-1.2.1&auto=format&fit=crop&h=160&w=300&q=80">
+            </article>
+            <article class="col post">
+                <header>
+                    <h1>Eisbachwelle</h1>
+                </header>
+                <img
+                    src="https://images.unsplash.com/photo-1526420463306-5124b0d03be4?ixlib=rb-1.2.1&auto=format&fit=crop&h=160&w=300&q=80">
+            </article>
         </div>
     </div>
 </body>
