--- a/lessons/03-20-lesson12/homework.html
+++ b/lessons/03-20-lesson12/homework.html
@@ -14,50 +14,80 @@
   <title>Icons Icons Icons</title>
 </head>
 
-<body>
-  <div class="container">
-    <h1>My Favorite Places</h1>
-    <div class="row">
-      <div class="col">
-        <div class="card">
-          <img src="https://source.unsplash.com/vcu-OZBxxRk/800x600" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h4 class="card-title">Vietnam <i class="fas fa-anchor"></i></h4>
-            <p class="card-text">Vietnam is a Southeast Asian country on the South China Sea known for its beaches,
-              rivers, Buddhist pagodas and bustling cities. Hanoi, the capital, pays homage to the nation’s iconic
-              Communist-era leader, Ho Chi Minh, via a huge marble mausoleum. Ho Chi Minh City (formerly Saigon) has
-              French colonial landmarks, plus Vietnamese War history museums and the Củ Chi tunnels, used by Viet Cong
-              soldiers.</p>
-          </div>
+<div class="container-fluid">
+  <h1>My Favorite Places</h1>
+  <div class="row">
+    <div class="col-9">
+      <div class="card">
+        <img src="https://source.unsplash.com/IAe4R_RiB08/800x600" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h4 class="card-title">Sweden <i class="fas fa-fish"></i></h4>
+          <p class="card-text">Sweden is a Scandinavian nation with thousands of coastal islands and inland lakes,
+            along with vast boreal forests and glaciated mountains. Its principal cities, eastern capital Stockholm
+            and southwestern Gothenburg and Malmö, are all coastal. Stockholm is built on 14 islands. It has more than
+            50 bridges, as well as the medieval old town, Gamla Stan, royal palaces and museums such as open-air
+            Skansen.</p>
         </div>
       </div>
-      <div class="col">
-        <div class="card">
-          <img src="https://source.unsplash.com/IAe4R_RiB08/800x600" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h4 class="card-title">Sweden <i class="fas fa-fish"></i></h4>
-            <p class="card-text">Sweden is a Scandinavian nation with thousands of coastal islands and inland lakes,
-              along with vast boreal forests and glaciated mountains. Its principal cities, eastern capital Stockholm
-              and southwestern Gothenburg and Malmö, are all coastal. Stockholm is built on 14 islands. It has more than
-              50 bridges, as well as the medieval old town, Gamla Stan, royal palaces and museums such as open-air
-              Skansen.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img src="https://source.unsplash.com/VUG96jF8Gr0/800x600" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h4 class="card-title">Italy <i class="fas fa-pizza-slice"></i></h4>
-            <p class="card-text">Italy, a European country with a long Mediterranean coastline, has left a powerful mark
-              on Western culture and cuisine. Its capital, Rome, is home to the Vatican as well as landmark art and
-              ancient ruins. Other major cities include Florence, with Renaissance masterpieces such as Michelangelo’s
-              "David" and Brunelleschi's Duomo; Venice, the city of canals; and Milan, Italy’s fashion capital.¥</p>
-          </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <img src="https://source.unsplash.com/vcu-OZBxxRk/800x600" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h4 class="card-title">Vietnam <i class="fas fa-anchor"></i></h4>
+          <p class="card-text">Vietnam is a Southeast Asian country on the South China Sea known for its beaches,
+            rivers, Buddhist pagodas and bustling cities. Hanoi, the capital, pays homage to the nation’s iconic
+            Communist-era leader, Ho Chi Minh, via a huge marble mausoleum. Ho Chi Minh City (formerly Saigon) has
+            French colonial landmarks, plus Vietnamese War history museums and the Củ Chi tunnels, used by Viet Cong
+            soldiers.</p>
         </div>
       </div>
     </div>
   </div>
+  <hr>
+  <div class="row">
+    <div class="col">
+      <div class="card">
+        <img src="https://source.unsplash.com/vcu-OZBxxRk/800x600" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h4 class="card-title">Vietnam <i class="fas fa-anchor"></i></h4>
+          <p class="card-text">Vietnam is a Southeast Asian country on the South China Sea known for its beaches,
+            rivers, Buddhist pagodas and bustling cities. Hanoi, the capital, pays homage to the nation’s iconic
+            Communist-era leader, Ho Chi Minh, via a huge marble mausoleum. Ho Chi Minh City (formerly Saigon) has
+            French colonial landmarks, plus Vietnamese War history museums and the Củ Chi tunnels, used by Viet Cong
+            soldiers.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <img src="https://source.unsplash.com/IAe4R_RiB08/800x600" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h4 class="card-title">Sweden <i class="fas fa-fish"></i></h4>
+          <p class="card-text">Sweden is a Scandinavian nation with thousands of coastal islands and inland lakes,
+            along with vast boreal forests and glaciated mountains. Its principal cities, eastern capital Stockholm
+            and southwestern Gothenburg and Malmö, are all coastal. Stockholm is built on 14 islands. It has more than
+            50 bridges, as well as the medieval old town, Gamla Stan, royal palaces and museums such as open-air
+            Skansen.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <img src="https://source.unsplash.com/VUG96jF8Gr0/800x600" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h4 class="card-title">Italy <i class="fas fa-pizza-slice"></i></h4>
+          <p class="card-text">Italy, a European country with a long Mediterranean coastline, has left a powerful mark
+            on Western culture and cuisine. Its capital, Rome, is home to the Vatican as well as landmark art and
+            ancient ruins. Other major cities include Florence, with Renaissance masterpieces such as Michelangelo’s
+            "David" and Brunelleschi's Duomo; Venice, the city of canals; and Milan, Italy’s fashion capital.¥</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<body>
 </body>
 
 </html>
